fix: add overflow-x hidden to body

--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -14,6 +14,10 @@ html {
   font-family: 'Roboto', system-ui, sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 #vue-tracer-overlay {
   position: fixed !important;
 }
